--- a/index.html
+++ b/index.html
@@ -45,9 +45,16 @@
 
 Payton Swick
 
-Code Wrangler at Automattic (WordPress.com)
+Code Wrangler at Automattic<br/>
+(we make WordPress.com)
 
 @sirbrillig
+					</script>
+				</section>
+
+				<section data-markdown>
+					<script type="text/template">
+### So, what's the difference?
 					</script>
 				</section>
 
@@ -72,9 +79,9 @@ https://en.support.wordpress.com/com-vs-org/
 
 				<section data-markdown>
 					<script type="text/template">
-# History
+## History
 
-> WordPress is an open source content management system. That is, it is software that anyone can download and use for free to build a website without having to code that website by hand. “Open source” means that the code behind the software is openly shared and available to anyone to work with, so WordPress is developed, supported, and maintained by the community at large, and not by any one company.
+> WordPress is an open source content management system ... “Open source” means that the code behind the software is openly shared and available to anyone to work with, so WordPress is developed, supported, and maintained by the community at large, and not by any one company.
 
 https://dailypost.wordpress.com/2013/11/14/com-or-org/
 					</script>
@@ -82,7 +89,7 @@ https://dailypost.wordpress.com/2013/11/14/com-or-org/
 
 				<section data-markdown>
 					<script type="text/template">
-# History
+## History
 
 > A couple of years after WordPress came on the scene, Matt Mullenweg (co-founder of WordPress) noticed that a lot of people were saying “I really love WordPress, but I don’t want to bother with keeping my WordPress site updated myself, or worry about backups or security. I wish all that was managed for me, so I could just focus on blogging.”
 
@@ -138,11 +145,13 @@ Themes with built-in editors, etc.
 
 				<section data-markdown>
 					<script type="text/template">
-### Why does the WordPress.com admin look different?
+#### Why does the WP.com admin look different?
 
 #### "Calypso"
 
-> A single interface to manage all your WordPress.com or Jetpack-enabled sites, built with the latest web technologies and used by millions of people — and now it's open source.
+> A single interface to manage all your WordPress.com or Jetpack-enabled sites, built with the latest web technologies
+
+<img src="images/calypso-vs-wpadmin.png" alt="calypso vs. wp-admin">
 
 https://developer.wordpress.com/calypso/
 					</script>
@@ -150,25 +159,25 @@ https://developer.wordpress.com/calypso/
 
 				<section data-markdown>
 					<script type="text/template">
-### Why does the WordPress.com admin look different?
-
-#### "Calypso"
+### "Calypso"
 
 It's also a desktop app.
 
-But the old "wp-admin" is still there.
+<img src="images/wordpress-app.png" alt="WordPress app">
+
+But the old `/wp-admin/` is still there.
 					</script>
 				</section>
 
 				<section data-markdown>
 					<script type="text/template">
-### What if I want to move between the two?
+#### What if I want to move between the two?
 
 Mostly pretty easy...
 
 if the theme is the same, and the plugins are the same.
 
-Jetpack can help.
+**Jetpack** can help.
 
 					</script>
 				</section>
@@ -211,9 +220,11 @@ https://jetpack.com/about/
 
 				<section data-markdown>
 					<script type="text/template">
-# Which do I pick?
+## Which do I pick?
 
 Rent or Buy?
+
+<img src="images/buttons.png" alt="you must choose">
 
 (You can always rent now and buy later.)
 
