--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@ https://dailypost.wordpress.com/2013/11/14/com-or-org/
 
 				<section data-markdown>
 					<script type="text/template">
+## WordPress.org is software maintained by the community
+					</script>
+				</section>
+
+				<section data-markdown>
+					<script type="text/template">
 ## History
 
 > A couple of years after WordPress came on the scene, Matt Mullenweg (co-founder of WordPress) noticed that a lot of people were saying “I really love WordPress, but I don’t want to bother with keeping my WordPress site updated myself, or worry about backups or security. I wish all that was managed for me, so I could just focus on blogging.”
@@ -99,7 +105,13 @@ https://dailypost.wordpress.com/2013/11/14/com-or-org/
 
 				<section data-markdown>
 					<script type="text/template">
-# Rent or Buy?
+## WordPress.com is a host for WordPress sites that takes care of plugins and maintenance
+					</script>
+				</section>
+
+				<section data-markdown>
+					<script type="text/template">
+## Rent or Buy?
 
 > Having a blog or website here on WordPress.com is a bit like renting an apartment in a complex. You don’t have to worry about the pipes freezing in winter, you don’t have to mow the backyard, and you don’t have to fix the dishwasher if it breaks — all of that is your landlord’s job.
 
@@ -126,7 +138,7 @@ https://dailypost.wordpress.com/2013/11/14/com-or-org/
 
 				<section data-markdown>
 					<script type="text/template">
-### What themes are available on WordPress.com?
+### What themes *are* available on WordPress.com?
 A lot. (About 300.)
 
 Most are free, but there are a lot of Premium themes too.
@@ -135,11 +147,17 @@ Most are free, but there are a lot of Premium themes too.
 
 				<section data-markdown>
 					<script type="text/template">
-### What themes are NOT available on WordPress.com?
+### What themes *are NOT* available on WordPress.com?
 
 Framework themes (eg: Genesis, Divi).
 
 Themes with built-in editors, etc.
+					</script>
+				</section>
+
+				<section data-markdown>
+					<script type="text/template">
+#### Why does the WP.com admin look different?
 					</script>
 				</section>
 
@@ -164,6 +182,12 @@ https://developer.wordpress.com/calypso/
 It's also a desktop app.
 
 <img src="images/wordpress-app.png" alt="WordPress app">
+					</script>
+				</section>
+
+				<section data-markdown>
+					<script type="text/template">
+### "Calypso"
 
 But the old `/wp-admin/` is still there.
 					</script>
@@ -171,13 +195,19 @@ But the old `/wp-admin/` is still there.
 
 				<section data-markdown>
 					<script type="text/template">
-#### What if I want to move between the two?
+#### What if I want to move between the two
+
+#### (WP.com and WP.org)?
 
 Mostly pretty easy...
 
+<p class="fragment">
 if the theme is the same, and the plugins are the same.
+</p>
 
+<p class="fragment">
 **Jetpack** can help.
+</p>
 
 					</script>
 				</section>
@@ -227,6 +257,13 @@ Rent or Buy?
 <img src="images/buttons.png" alt="you must choose">
 
 (You can always rent now and buy later.)
+
+					</script>
+				</section>
+
+				<section data-markdown>
+					<script type="text/template">
+## Thank you!
 
 					</script>
 				</section>
