More theme info

--- a/index.html
+++ b/index.html
@@ -139,9 +139,17 @@ https://dailypost.wordpress.com/2013/11/14/com-or-org/
 				<section data-markdown>
 					<script type="text/template">
 ### What themes *are* available on WordPress.com?
-A lot. (About 300.)
+<p class="fragment">
+A lot. (About 360.)
+</p>
 
-Most are free, but there are a lot of Premium themes too.
+<p class="fragment">
+More are being added every month.
+</p>
+
+<p class="fragment">
+About half are free, but there are a lot of Premium themes too (made by community members running theme shops).
+</p>
 					</script>
 				</section>
 
@@ -149,9 +157,17 @@ Most are free, but there are a lot of Premium themes too.
 					<script type="text/template">
 ### What themes *are NOT* available on WordPress.com?
 
+<p class="fragment">
 Framework themes (eg: Genesis, Divi).
+</p>
 
+<p class="fragment">
 Themes with built-in editors, etc.
+</p>
+
+<p class="fragment">
+Just a lot that haven't quite met a certain set of standards (but there are people working to help get them there).
+</p>
 					</script>
 				</section>
 
